added non webkit css to card-text class

--- a/css/app.css
+++ b/css/app.css
@@ -10,6 +10,7 @@
     overflow: hidden;
     /* max-width: 100px; */
     -webkit-line-clamp: 4;
+    line-clamp: 4;
     -webkit-box-orient: vertical;
+    box-orient: vertical;
 }
-
