--- a/css/app.css
+++ b/css/app.css
@@ -30,3 +30,13 @@
 aside>div {
     min-height: 80vh;
 }
+
+.live-match-div {
+    height: 150px;
+    /* border: 5px solid black; */
+
+    & div {
+        height: 80px;
+    }
+}
+
